--- a/restApi/src/main/resources/static/index.html
+++ b/restApi/src/main/resources/static/index.html
@@ -22,7 +22,7 @@ div.row > input {
 		
 	</div>
 	<h3>계정 등록</h3>
-	<div id="regist">
+	<div id="message">
 			<input id="userid" placeholder="아이디를 입력하세요.">
 			<input id="username" placeholder="이름을 입력하세요.">
 			<input id="password" type="password" placeholder="패스워드를 입력하세요.">
@@ -33,6 +33,7 @@ div.row > input {
 				<option>미공개</option>
 			</select>
 			<input id="email" type="email" placeholder="이메일을 입력하세요.">
+			<button id="btnCheckeEmail">이메일 중복검사</button>	
 			<button id="btnSave">저장하기</button>	
 	</div>
 	
